syntax = "proto3";
package x.swap.types;

import "cosmos/base/v1beta1/coin.proto";
import "google/api/annotations.proto";

option go_package = "github.com/paxi-web3/paxi/x/swap/types";

service Query {
    rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
        option (google.api.http) = {
            get: "/paxi/swap/params"
        };
    }

    rpc Position(QueryPositionRequest) returns (QueryPositionResponse) {
        option (google.api.http).get = "/paxi/swap/position/{creator}/{prc20}";
    }
}

message QueryParamsRequest {
}

message QueryParamsResponse {
    uint64 code_id = 1;
    uint64 swap_fee_bps = 2;
    uint64 min_liquidity = 3;
}

message ProviderPosition {
  string creator = 1;
  string prc20 = 2;
  string lp_amount = 3;
  string deposited_lp = 4;
}

message QueryPositionRequest {
  string creator = 1;
  string prc20 = 2;
}

message QueryPositionResponse {
  ProviderPosition position = 1;
  string expected_paxi = 2;
  string expected_prc20 = 3;
  string profit_lp = 4;
}